# coq-ocaml-api

./: .gitignore  README.md  _CoqProject  coq_ocaml_api.opam  dune-project
coq-compat/: Integer.v  dune-project
coq-compat/extract/: CoqAPI.ml  Ctr.mli  Extract.v  bigInt.ml  bigInt.mli  dune
coq-compat/src/: Common.v  CoqBigInt.v  CoqCtr.v  CoqInt.v  ExtractUtil.v  IntFuncs.v  Monads.v  State.v  StateHoare.v  dune
ctr/client-coq/: CountClient.v  dune
ctr/client-ocaml/: CountClient.ml  dune
ctr/extract/: Count.mli  CtrAPIExtract.v  CtrImports.ml  dune
ctr/src/: CtrAPI.v  dune
fol/src/: FOLAPI.v
lib/: dune
list/client-coq/: ListClient.v  dune
list/client-ocaml/: ListClient.ml  dune
list/extract/: ListAPIExtract.v  MyList.mli  dune
list/src/: ListAPI.v  ListAPIProofs.v  dune
term/client-coq/: TermClient.v  dune
term/client-ocaml/: TermClient.ml  dune
term/extract/: TermAPIExtract.v  TermImports.ml  dune  term.mli
term/src/: SubstitutionProof.v  TermAPI.v  TermSemantics.v  dune
