(coq.extraction
 (prelude Extract)
 (extracted_modules BinNums CoqBigInt Monads State CoqCtr)
 (theories Flocq compcert CoqCompat ExtLib)
 )

;create Ctr.ml
(rule
  (deps CoqCtr.ml)
  (targets Ctr.ml)
  (action
    (with-stdout-to Ctr.ml
        (cat CoqCtr.ml)
    )))

(library
 (name CoqAPI)
 (public_name CoqAPI)
 (modules (:standard \ CoqCtr ))
 (libraries zarith))


