(coq.extraction
 (prelude ListAPIExtract)
 (extracted_modules ListAPI)
 (theories Flocq compcert ListAPI CoqCompat ExtLib)
 )

(rule
  (deps ListAPI.ml)
  (targets MyList.ml)
  (action
    (with-stdout-to MyList.ml
     (pipe-stdout
        (cat ListAPI.ml)
        (run sed -e "s/^open.*//g")
     )
    )))

(library
 (name ListAPI)
 (modules (:standard \ ListAPI))
 (libraries zarith re CoqAPI))
